# nexi-hyperon-poc

./: Cargo.toml  LICENSE  README.md  Structure.md
das_node/: Cargo.toml
das_node/src/: main.rs  nexi_das_wrapper.rs
examples/: das_query.metta  mercy_demo.metta
integration/: Cargo.toml
integration/src/: lib.rs  nexi_grounded.rs
repl/: Cargo.toml
repl/src/: main.rs
